# printer-application-framework

./: .gitignore  AUTHORS  INSTALL.md  Makedefs  Makefile.am  Makefile.in  NEWS  README.md  TODO.md  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  cups-config.in  temp.txt
.deps/: cups-deviced.Po
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
backend/: usb
config/: framework.config  run-server.command
cups/: config.h
ippeveprinter/: Dependencies  Makefile  ippevepcl  ippeveprinter  ippeveprinter-static  ippeveprinter.c  ippeveps  ippfind  ipptool  ipptool-static
ppdc/: genstrings  ppdc  ppdhtml  ppdi  ppdmerge  ppdpo  sample.c
server/: .Makefile  Makefile  Makefile.am  Makefile.in  compression.c  compression.h  cups-deviced  cups-deviced.c  cups-driverd  cups-driverd.cxx  debug.txt  detection.c  deviced  deviced.c  deviced.h  framework-config.h  ippprint  ippprint.c  ippprint.h  libusb  libusb.c  list.c  list.h  listppd.c  log.c  log.h  mime_type  mime_type.c  server  server.c  server.h  server_main.c  util.c  util.h
server/.deps/: detection.Tpo  deviced.Po  ippprint.Po  mime_type.Po  server.Po  util.Po
share/cups/mime/: mime.convs
share/cups/ppdc/: liblouis1.defs  liblouis2.defs  liblouis3.defs  liblouis4.defs
snap/: snapcraft.yaml
var/temp/: logs.txt
